--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "errsole": "^2.1.0",
     "errsole-mongodb": "^1.1.1",
     "express": "^4.19.2",
