--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "errsole": "^2.1.0",
-    "errsole-mongodb": "^1.1.1",
+    "errsole": "^2.1.1",
+    "errsole-mongodb": "^1.1.2",
     "express": "^4.19.2",
+    "http-proxy-middleware": "^3.0.0",
     "mongodb": "^6.5.0"
   }
 }
